4.13.0:

BREAKING CHANGE - the `as` variable operator (e.g. `.a as $x`) now makes a _copy_ of the node(s) at the 
path rather than a reference. This is in order to make it work more like the `jq` equivalent. 

This means any updates made to that variable do not update the original.

There's a new operator `ref` that will make a reference (and allow multiple updates to the original path by referencing the variable).
Sorry for any inconvenience caused!.


- New `with` operator for making multiple changes to a given path
- Subtract operator now supports subtracting elements from arrays!
- Fixed Swapping values using variables #934
- Github Action now properly supports multiline output #936, thanks @pjxiao
- Fixed missing closing bracket validation #932

4.12.2:
- Fix processing of hex numbers #929
- Fixed alternative and union operator issues #930

4.12.1:
 - Merge comment fix #919

4.12.0:
- Can now convert yaml to properties properties format (`-o=props`), See [docs](https://mikefarah.gitbook.io/yq/v/v4.x/usage/properties) for more info.
- Fixed document header/footer comment handling when merging (https://github.com/mikefarah/yq/issues/919)
- pretty print yaml 1.1 compatibility  (https://github.com/mikefarah/yq/issues/914)