@@ -1,1 +1,1 @@
-Use the `with` operator to conveniently make multiple updates to a deeply nested path.
+Use the `with` operator to conveniently make multiple updates to a deeply nested path, or to update array elements relatively to each other.
